--- a/app/src/main/res/layout/activity_restaurants.xml
+++ b/app/src/main/res/layout/activity_restaurants.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.rohantaneja.zomatoclone.RestaurantsActivity">
+    tools:context="com.rohantaneja.zomatoclone.ui.RestaurantsActivity">
 
     <TextView
         android:layout_width="wrap_content"
