setup search edit text visibility

--- a/app/src/main/res/layout/activity_restaurants.xml
+++ b/app/src/main/res/layout/activity_restaurants.xml
@@ -13,7 +13,10 @@
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         android:hint="@string/search_hint"
+        android:imeOptions="actionSearch"
+        android:inputType="text"
         android:maxLines="1"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
